--- a/package.json
+++ b/package.json
@@ -8,9 +8,23 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@js-joda/core": "^5.2.0",
+    "@js-joda/locale_en": "^4.7.0",
+    "@js-joda/timezone": "^2.12.0",
     "buefy": "^0.9.19",
+    "cleave.js": "^1.6.0",
     "core-js": "^3.8.3",
+    "csv-loader": "^3.0.3",
+    "file-saver": "^2.0.5",
+    "json2csv": "^5.0.7",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
+    "uuid": "^8.3.2",
+    "vee-validate": "3",
     "vue": "^2.6.14",
+    "vue-async-computed": "^3.9.0",
+    "vue-lodash": "^2.1.2",
+    "vue-papa-parse": "^3.0.4",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2",
     "vuex-localstorage": "^1.0.0"
